--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -21,6 +21,7 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
 .main {
   margin-left: 250px;
+  padding: 5px;
 }
 
 .navbar-custom {
@@ -94,20 +95,16 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
   padding: 2%;
 }
 
+.m-4 {
+  margin: 4%;
+}
+
 .mt-1 {
   margin-top: 1%;
 }
 
-.mb-2 {
-  margin-bottom: 2%;
-}
-
-.pt-10 {
-  padding-top: 10%;
-}
-
-.w-20 {
-  width: 20%;
+.ml-2 {
+  margin-left: 2%;
 }
 
 .mb-2 {
@@ -120,6 +117,22 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
 .w-20 {
   width: 20%;
+}
+
+.mb-2 {
+  margin-bottom: 2%;
+}
+
+.pt-10 {
+  padding-top: 10%;
+}
+
+.w-20 {
+  width: 20%;
+}
+
+.p-15px {
+  padding: 15px;
 }
 
 .columns li.ember-power-select-option {
@@ -182,6 +195,11 @@ li a {
   padding: 2px;
   margin-left: 4px;
 }
+.icon-big-button {
+  width: 30px !important;
+  height: 30px !important;
+  display: inline;
+}
 
 .icon-button {
   width: 18px !important;
@@ -219,23 +237,7 @@ li a {
 }
 
 .folder-divider {
-  border: 1px solid #238bca;
-}
-
-.folder-header {
-  font-weight: bold;
-  font-size: 18px !important;
-  color: #238bca;
-}
-
-.folder-edit-icon {
-  /* filter for #238bca color, used https://codepen.io/sosuke/pen/Pjoqqp to generate */
-  filter: invert(42%) sepia(69%) saturate(780%) hue-rotate(164deg)
-    brightness(95%) contrast(84%);
-}
-
-.folder-divider {
-  border: 1px solid #238bca;
+  border-bottom: 2px solid #238bca;
 }
 
 .folder-header {
