--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -4,17 +4,26 @@
 {{#if this.isTeamConfiguring}}
   <TeamMemberConfigure @teamId={{@team.id}} @onAbort={{this.toggleTeamConfigure}}/>
 {{/if}}
-<div class="container mt-1">
-  <div class="row mb-10">
-    <div role="button" {{on "click" this.collapse}}>
+<div class="container mt-2 p-2 border">
+  <div class="row mb-10 d-flex">
+    <div class="col" role="button" {{on "click" this.collapse}}>
       <h1 class="d-inline">{{@team.name}}</h1>
-      <span class="ml-5">
+    </div>
+    <div class="col-auto d-inline">
+      <span>
         <a href="#" role="button" {{on "click" this.toggleTeamEdit}}>
-          <img class="icon-button" src="/ember/assets/images/edit.svg" alt="edit">
+          <img class="icon-big-button" src="/ember/assets/images/edit.svg" alt="edit">
         </a>
         <a id="config_team_button" href="#" role="button" {{on "click" this.toggleTeamConfigure}}>
-          <img class="icon-button" src="/ember/assets/images/team_config.svg" alt="configure">
+          <img class="icon-big-button" src="/ember/assets/images/team_config.svg" alt="configure">
         </a>
+      </span>
+      <span role="button" {{on "click" this.collapse}}>
+        {{#if this.collapsed}}
+          <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+        {{else}}
+          <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+        {{/if}}
       </span>
     </div>
     <hr>
