--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -2,16 +2,14 @@
 
 <div id="sidebar">
   <div class="navbar-header">
-    <a href="" class="navbar-logo"><img src="ember/assets/images/cryptopussy_without_text.svg" alt="logo" class="logo-icon"></a>
-    <a href="" class="navbar-brand">Cryptopus</a>
+    <a href="/teams" class="navbar-logo"><img src="ember/assets/images/cryptopussy_without_text.svg" alt="logo" class="logo-icon"></a>
+    <a href="/teams" class="navbar-brand">Cryptopus</a>
   </div>
-  <nav class="navbar navbar-inverse nav-side-bar">
+  <nav class="navbar-inverse nav-side-bar">
     <SideNavBar @teams={{this.model}} />
   </nav>
 </div>
-
 <div class="main" role="main">
   {{outlet}}
 </div>
-
 <Footer />
