--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -204,3 +204,13 @@ li a {
 .ember-basic-dropdown .ember-basic-dropdown-trigger {
   padding-top: 3px;
 }
+
+.dropdown-toggle-hided::after {
+  display: none;
+}
+
+.helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
