Add favourising teams and filtering by favourites, refs: #53708

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -6,7 +6,7 @@
     <a href="/teams" class="navbar-brand">Cryptopus</a>
   </div>
   <nav class="navbar-inverse nav-side-bar">
-    <SideNavBar @teams={{this.model}} />
+    <SideNavBar />
   </nav>
 </div>
 <div class="main" role="main">
