--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -3,33 +3,49 @@
 
     <a class="list-group-item list-group-item-action top-item bg-blue-two font-weight-bold"><strong>All Teams or something</strong></a>
 
-    {{#each this.teams as |team|}}
-      <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}}">
-        {{#if team.private}}
-          <img class="icon icon-button" src="/ember/assets/images/members.svg" alt="">
-        {{else}}
-          <img class="icon icon-button" src="/ember/assets/images/encrypted_small.svg" alt="">
-        {{/if}}
-        {{team.name}}
-        {{#if (or (not (eq team this.navService.selectedTeam)) this.collapsed)}}
-          <img class="icon icon-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
-        {{else}}
-          <img class="icon icon-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
-        {{/if}}
-      </a>
-      <BsCollapse class="list-group" id="nav-folders-{{team.id}}" @collapsed={{or (not (eq team this.navService.selectedTeam)) this.collapsed}}>
-        {{#each team.folders as |folder|}}
-          <a role="button"  class="list-group-item {{if (eq folder this.navService.selectedFolder) "bg-blue-two selected-nav-entry" "bg-blue-three"}}" {{on "click" (fn this.setSelectedFolder folder)}}>
-            <img class="icon icon-button" src="/ember/assets/images/folder.svg" alt="">
-            {{folder.name}}
-          </a>
-        {{/each}}
-        {{#unless team.folders}}
-          <a class="list-group-item bg-blue-three">
-            <span class="font-weight-light">No folders</span>
-          </a>
-        {{/unless}}
-      </BsCollapse>
-    {{/each}}
+    {{#if this.teams}}
+      {{#each this.teams as |team|}}
+        <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}}">
+          {{#if team.private}}
+            <img class="icon icon-button" src="/ember/assets/images/members.svg" alt="">
+          {{else}}
+            <img class="icon icon-button" src="/ember/assets/images/encrypted_small.svg" alt="">
+          {{/if}}
+          {{team.name}}
+          {{#if (or (not (eq team this.navService.selectedTeam)) this.collapsed)}}
+            <img class="icon icon-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+          {{else}}
+            <img class="icon icon-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+          {{/if}}
+        </a>
+        <BsCollapse class="list-group" id="nav-folders-{{team.id}}" @collapsed={{or (not (eq team this.navService.selectedTeam)) this.collapsed}}>
+          {{#each team.folders as |folder|}}
+            <a role="button"  class="list-group-item {{if (eq folder this.navService.selectedFolder) "bg-blue-two selected-nav-entry" "bg-blue-three"}}" {{on "click" (fn this.setSelectedFolder folder)}}>
+              <img class="icon icon-button" src="/ember/assets/images/folder.svg" alt="">
+              {{folder.name}}
+            </a>
+          {{/each}}
+          {{#unless team.folders}}
+            <a class="list-group-item bg-blue-three">
+              <span class="font-weight-light">No folders</span>
+            </a>
+          {{/unless}}
+        </BsCollapse>
+      {{/each}}
+    {{else}}
+      <div class="list-group-item list-group-item-action bg-blue-one">{{t "teams.none_available"}}</div>
+    {{/if}}
+    <div class="d-flex justify-content-md-center">
+      <div class="col-md-6">
+        <BsButtonGroup @type="radio" @value={{this.showsFavourites}} @onChange={{this.toggleFavourites}} as |bg|>
+          <bg.button @type="primary" @value={{false}}>
+            <img class="icon icon-button" src="/ember/assets/images/members.svg" alt="">
+          </bg.button>
+          <bg.button @type="primary" @value={{true}}>
+            <img class="icon icon-button" src="/ember/assets/images/star{{if this.showsFavourites "-filled"}}.svg" alt="star">
+          </bg.button>
+        </BsButtonGroup>
+      </div>
+    </div>
   </div>
 </div>
