Add notify messages and crudify controllers, refs: #54550

--- a/frontend/app/templates/components/account-card-show.hbs
+++ b/frontend/app/templates/components/account-card-show.hbs
@@ -25,7 +25,7 @@
           <Input class="secret" @disabled="true" @value={{@account.cleartextUsername}}/>
         </div>
         <div class="col-sm-3">
-          <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextUsername}}>
+          <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextUsername}} @success={{fn this.onCopied "username"}}>
             <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
           </CopyButton>
         </div>
@@ -35,7 +35,7 @@
           <Input class="secret" @disabled="true" @type="password" @value={{@account.cleartextPassword}}/>
         </div>
         <div class="col-sm-3">
-          <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
+          <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}} @success={{fn this.onCopied "password"}}>
             <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
           </CopyButton>
         </div>
